--- a/post_sidebar.html
+++ b/post_sidebar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header">reqgqgq3fg
         <div class="wraper_top">
 
             <div class="header__wraper">
