--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -29,7 +29,7 @@
                     <ul class="header__list">
                         <li><a class="header__link" href="index.html">lifestyle</a></li>
                         <li><a class="header__link" href="post_sidebar.html">photodiary</a></li>
-                        <li><a class="header__link" href="music">music</a></li>
+                        <li><a class="header__link" href="#music">music</a></li>
                         <li><a class="header__link" href="post_full_width.html">travel</a></li>
                     </ul>
                 </nav>
