--- a/post_sidebar.html
+++ b/post_sidebar.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header">reqgqgq3fg
+    <header class="header">
         <div class="wraper_top">
 
             <div class="header__wraper">
@@ -29,7 +29,7 @@
                     <ul class="header__list">
                         <li><a class="header__link" href="index.html">lifestyle</a></li>
                         <li><a class="header__link" href="post_sidebar.html">photodiary</a></li>
-                        <li><a class="header__link" href="music">music</a></li>
+                        <li><a class="header__link" href="#music">music</a></li>
                         <li><a class="header__link" href="post_full_width.html">travel</a></li>
                     </ul>
                 </nav>
