--- a/post_full_width.html
+++ b/post_full_width.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/nulling.css">
@@ -227,7 +227,7 @@
                         <img src="img/avatar/avatar2.jpg" alt="Avatar">
                     </div>
 
-                    <input class="comment__discussin title__style" type="text" name="" id=""
+                    <input class="comment__discussin title__style" type="text" name="input" id="input"
                         placeholder="join the discussin">
                 </div>
 
