--- a/post_full_width.html
+++ b/post_full_width.html
@@ -227,8 +227,8 @@
                         <img src="img/avatar/avatar2.jpg" alt="Avatar">
                     </div>
 
-                    <input class="comment__discussin title__style" type="text" name="input" id="input"
-                        placeholder="join the discussin">
+                    <input class="comment__discussin" type="text" name="input" id="input"
+                        placeholder="JOIN THE DISCUSSIN">
                 </div>
 
                 <div class="comment__block">
