--- a/post_sidebar.html
+++ b/post_sidebar.html
@@ -148,7 +148,7 @@
                 </section>
             </div>
 
-            <div class="sidebar__wrapper">
+            <section class="sidebar__wrapper">
 
                 <div class="sidebar__photo">
                     <img src="img/photo/sidebar/about_me.jpg" alt="About me">
@@ -179,7 +179,7 @@
                 <div class="sidebar__banner">
                     <img src="img/photo/sidebar/1baner.jpg" alt="Baner">
                 </div>
-            </div>
+            </section>
 
         </div>
     </section>
@@ -269,8 +269,8 @@
                         <img src="img/avatar/avatar2.jpg" alt="Avatar">
                     </div>
 
-                    <input class="comment__discussin title__style" type="text" name="" id=""
-                        placeholder="join the discussin">
+                    <input class="comment__discussin" type="text" name="" id=""
+                        placeholder="JOIN THE DISCUSSIN">
                 </div>
 
                 <div class="comment__block">
