--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                     <div class="lifestyle__card">
                         <a href="#"><img src="img/photo/photo4.jpg" alt="Photo"></a>
                         <div class="lifestyle__indents">
-                            <a href="#lifestyle">Lifestyle</a>
-                            <h2>More than just a music festival</h2>
+                            <a href="#photodiary">photodiary</a>
+                            <h2>American dream</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -128,8 +128,8 @@
                     <div class="lifestyle__card">
                         <a href="#"><img src="img/photo/photo5.jpg" alt="Photo"></a>
                         <div class="lifestyle__indents">
-                            <a href="#lifestyle">Lifestyle</a>
-                            <h2>Life tastes better with coffee</h2>
+                            <a href="#photodiary">photodiary</a>
+                            <h2>A day exploring the Alps</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -170,7 +170,7 @@
                         <a href="#"><img src="img/photo/photo2.jpg" alt="Photo"></a>
                         <div class="lifestyle__indents">
                             <a href="#lifestyle">Lifestyle</a>
-                            <h2>More than just a music festival</h2>
+                            <h2>Top 10 song for running</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -182,7 +182,7 @@
                         <a href="#"><img src="img/photo/photo1.jpg" alt="Photo"></a>
                         <div class="lifestyle__indents">
                             <a href="#lifestyle">Lifestyle</a>
-                            <h2>Life tastes better with coffee</h2>
+                            <h2>Cold winter days</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
