--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="ru">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/nulling.css">
@@ -24,7 +24,7 @@
                     <span></span>
                 </div>
 
-                <!-- Навигация для десктопа -->
+                <!-- Навигация -->
                 <nav id="header__menu" class="header__menu">
                     <ul class="header__list">
                         <li><a class="header__link" href="index.html">lifestyle</a></li>
@@ -37,179 +37,181 @@
         </div>
     </header>
 
-    <div class="photo__blog">
-        <div class="wraper_top">
-            <img src="img/photo/main_photo.jpg" alt="Photo">
-        </div>
-    </div>
-
-    <section class="photodiary">
-        <div class="wraper_top">
-            <div class="wraper">
-
-                <div class="photodiary__diary"><a class="title__style" href="post_full_width.html">photodiary</a>
-                </div>
-                <h2 class="photodiary__main">The perfect weekend getaway</h2>
-                <div class="photodiary__info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                        esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                        in
-                        culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste
-                        natus
-                        error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
-                        ab
-                        illo
-                        inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                        voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
-                        dolores
-                        eos
-                        qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
-                        dolor
-                        sit
-                        amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore
-                        et
-                        dolore magnam aliquam quaerat voluptatem.</p>
-                </div>
-                <div class="photodiary__coment"><a class="title__style" href="post_full_width.html">Leave a
-                        comment</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="lifestyle">
-        <div class="wraper_top">
-            <div class="wraper">
-
-                <div class="lifestyle__card_wrap">
-
-                    <div class="lifestyle__card">
-                        <a href="#"><img src="img/photo/photo3.jpg" alt="Photo"></a>
-                        <div class="lifestyle__indents">
-                            <a href="#lifestyle">Lifestyle</a>
-                            <h2>More than just a music festival</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris
-                            </p>
-                        </div>
-                    </div>
-                    <div class="lifestyle__card">
-                        <a href="#"><img src="img/photo/photo0.jpg" alt="Photo"></a>
-                        <div class="lifestyle__indents">
-                            <a href="#lifestyle">Lifestyle</a>
-                            <h2>Life tastes better with coffee</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris
-                            </p>
-                        </div>
-                    </div>
-                    <div class="lifestyle__card">
-                        <a href="#"><img src="img/photo/photo4.jpg" alt="Photo"></a>
-                        <div class="lifestyle__indents">
-                            <a href="#photodiary">photodiary</a>
-                            <h2>American dream</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris
-                            </p>
-                        </div>
-                    </div>
-                    <div class="lifestyle__card">
-                        <a href="#"><img src="img/photo/photo5.jpg" alt="Photo"></a>
-                        <div class="lifestyle__indents">
-                            <a href="#photodiary">photodiary</a>
-                            <h2>A day exploring the Alps</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris
-                            </p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="news">
-        <div class="wraper_top">
-            <div class="wraper container">
-                <div class="news__wraper">
-
-                    <div class="news__heading">Sign up for our newsletter!</div>
-
-                    <div class="news__email">
-                        <input type="email" placeholder="Enter a valid email address" name="email" id="">
-                        <a href="#"><img src="img/social_icon/send_icon.png" alt="Send icon"></a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="lifestyle">
-        <div class="wraper_top">
-            <div class="wraper">
-
-                <div class="lifestyle__card_wrap">
-
-                    <div class="lifestyle__card">
-                        <a href="#"><img src="img/photo/photo2.jpg" alt="Photo"></a>
-                        <div class="lifestyle__indents">
-                            <a href="#lifestyle">Lifestyle</a>
-                            <h2>Top 10 song for running</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris
-                            </p>
-                        </div>
-                    </div>
-                    <div class="lifestyle__card">
-                        <a href="#"><img src="img/photo/photo1.jpg" alt="Photo"></a>
-                        <div class="lifestyle__indents">
-                            <a href="#lifestyle">Lifestyle</a>
-                            <h2>Cold winter days</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <section class="load">
-        <div class="wraper_top">
-            <div class="wraper">
-
-                <div class="load__btn">
-                    <a href="#" class="load__link">Load more</a>
-                </div>
-
+    <main>
+        <div class="photo__blog">
+            <div class="wraper_top">
+                <img src="img/photo/main_photo.jpg" alt="Photo">
             </div>
         </div>
 
-    </section>
+        <section class="photodiary">
+            <div class="wraper_top">
+                <div class="wraper">
 
-    <section class="footer">
+                    <div class="photodiary__diary"><a class="title__style" href="post_full_width.html">photodiary</a>
+                    </div>
+                    <h2 class="photodiary__main">The perfect weekend getaway</h2>
+                    <div class="photodiary__info">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                            in
+                            culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste
+                            natus
+                            error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
+                            ab
+                            illo
+                            inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+                            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+                            dolores
+                            eos
+                            qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
+                            dolor
+                            sit
+                            amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore
+                            et
+                            dolore magnam aliquam quaerat voluptatem.</p>
+                    </div>
+                    <div class="photodiary__coment"><a class="title__style" href="post_full_width.html">Leave a
+                            comment</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="lifestyle">
+            <div class="wraper_top">
+                <div class="wraper">
+
+                    <div class="lifestyle__card_wrap">
+
+                        <div class="lifestyle__card">
+                            <a href="#"><img src="img/photo/photo3.jpg" alt="Photo"></a>
+                            <div class="lifestyle__indents">
+                                <a href="#lifestyle">Lifestyle</a>
+                                <h2>More than just a music festival</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris
+                                </p>
+                            </div>
+                        </div>
+                        <div class="lifestyle__card">
+                            <a href="#"><img src="img/photo/photo0.jpg" alt="Photo"></a>
+                            <div class="lifestyle__indents">
+                                <a href="#lifestyle">Lifestyle</a>
+                                <h2>Life tastes better with coffee</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris
+                                </p>
+                            </div>
+                        </div>
+                        <div class="lifestyle__card">
+                            <a href="#"><img src="img/photo/photo4.jpg" alt="Photo"></a>
+                            <div class="lifestyle__indents">
+                                <a href="#photodiary">photodiary</a>
+                                <h2>American dream</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris
+                                </p>
+                            </div>
+                        </div>
+                        <div class="lifestyle__card">
+                            <a href="#"><img src="img/photo/photo5.jpg" alt="Photo"></a>
+                            <div class="lifestyle__indents">
+                                <a href="#photodiary">photodiary</a>
+                                <h2>A day exploring the Alps</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="news">
+            <div class="wraper_top">
+                <div class="wraper container">
+                    <div class="news__wraper">
+
+                        <div class="news__heading">Sign up for our newsletter!</div>
+
+                        <div class="news__email">
+                            <input type="email" placeholder="Enter a valid email address" name="email" id="email">
+                            <a href="#"><img src="img/social_icon/send_icon.png" alt="Send icon"></a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <section class="lifestyle">
+            <div class="wraper_top">
+                <div class="wraper">
+
+                    <div class="lifestyle__card_wrap">
+
+                        <div class="lifestyle__card">
+                            <a href="#"><img src="img/photo/photo2.jpg" alt="Photo"></a>
+                            <div class="lifestyle__indents">
+                                <a href="#lifestyle">Lifestyle</a>
+                                <h2>Top 10 song for running</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris
+                                </p>
+                            </div>
+                        </div>
+                        <div class="lifestyle__card">
+                            <a href="#"><img src="img/photo/photo1.jpg" alt="Photo"></a>
+                            <div class="lifestyle__indents">
+                                <a href="#lifestyle">Lifestyle</a>
+                                <h2>Cold winter days</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <div class="load__more">
+            <div class="wraper_top">
+                <div class="wraper">
+
+                    <div class="load__btn">
+                        <a href="#" class="load__link">Load more</a>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+    <footer class="footer">
         <div class="wraper_top">
 
             <div class="footer__wraper">
@@ -226,7 +228,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 
