--- a/post_full_width.html
+++ b/post_full_width.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/nulling.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
     <title>Minimo Blog</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/fonts.css"  type="text/css">
+    <link rel="stylesheet" href="css/nulling.css"  type="text/css">
+    <link rel="stylesheet" href="css/style.css"  type="text/css">
+    <link rel="stylesheet" href="css/media.css"  type="text/css">
 </head>
 
 <body>
