--- a/index.html
+++ b/index.html
@@ -213,7 +213,13 @@
 
     <footer class="footer">
         <div class="wraper_top">
-
+            <p>
+                <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:67px;height:23px"
+                        src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                        alt="Правильный CSS!" />
+                </a>
+            </p>
             <div class="footer__wraper">
 
                 <div class="footer__privacy">
